src/test/deca/context/invalid/classextends2.deca
class A{
    B a=new B();
}
class B extends A{
    
}
{
    A b=new A();
    b.a=5;
}